--- a/index.html
+++ b/index.html
@@ -21,6 +21,77 @@
         <p>Пофарбуйте мене в зелений колір (color:green).</p>
         <p class='yellow'>Пофарбуйте мене в жовтий колір (color:yellow).</p>
     </div>
+
+    <!-- Завдання 2
+   1)  Створити розмітку контейнера, що містить списки уроків на кожен день (пн, вт, ср, чт та пт). 
+   2)  Пофарбуйте елементи списків у різні кольори та додайте ефекти: 
+        2.1.     використовуючи псевдокласи 
+        2.1.1.   5 типів псевдокласів стану 
+        2.1.2.   та 5 типів структурних псевдокласів). -->
+
+    <div class="timetable">
+        <div class="monday">
+            <h3 class="monday-title">Понеділок</h3>
+            <ol>
+                <li>Фізкультура</li>
+                <li>Алгебра</li>
+                <li>Алгебра</li>
+                <li>Англійська мова</li>
+                <li>Англійська мова</li>
+            </ol>
+        </div>
+
+        <div class="tuesday">
+            <h3 class="tuesday-title">Вівторок</h3>
+            <ol>
+                <li>Фізкультура</li>
+                <li>Геометрія</li>
+                <li>Геометрія</li>
+                <li>Українська мова</li>
+                <li>Українська мова</li>
+            </ol>
+        </div>
+        <a href="">
+            <div class="wednesday">
+
+                <h3 class="wednesday-title">Середа</h3>
+                <ol>
+                    <li>Фізкультура</li>
+                    <li>Історія</li>
+                    <li>Історія</li>
+                    <li>Географія</li>
+                    <li>Географія</li>
+                </ol>
+            </div>
+        </a>
+
+        <div class="thursday">
+            <a href="">
+                <h3 class="thursday-title">Четвер</h3>
+                <ol>
+                    <li>Музичне мистецтво</li>
+                    <li>Українська література</li>
+                    <li>Українська література</li>
+                    <li>Українська мова</li>
+                    <li>Українська мова</li>
+                </ol>
+            </a>
+        </div>
+
+
+        <div class="friday">
+            <h3 class="friday-title">П'ятниця</h3>
+
+            <ol class="friday-list">
+                <li>Алгебра</li>
+                <li>Геометрія</li>
+                <li>Географія</li>
+                <li>Історія</li>
+                <li>Англійська мова</li>
+            </ol>
+        </div>
+
+    </div>
 </body>
 
 </html>
